--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.7.0",
     "react-responsive-carousel": "^3.1.45",
     "react-scripts": "2.1.3",
+    "react-spinner-material": "^1.0.19",
     "swiper": "^4.4.6"
   },
   "scripts": {
